Fixed action overflow

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -34,6 +34,7 @@ h1 {
     width: 100%;
     height: 100px;
     position: relative;
+    overflow: hidden;
 
     h2 {
         margin: 0;
